feat: add eslint and prettier

--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.1",
+    "@babel/eslint-parser": "^7.21.8",
     "@babel/preset-env": "^7.22.4",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "group-css-media-queries-loader": "^4.3.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
@@ -24,6 +30,7 @@
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.2",
     "postcss-preset-env": "^8.4.2",
+    "prettier": "2.8.8",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
